fix: script consertado

--- a/package.json
+++ b/package.json
@@ -2,20 +2,20 @@
   "name": "Terapeuta-Ariana",
   "version": "1.0.0",
   "scripts": {
-    "install:front": "cd frontend && npm install",
-    "install:back": "cd backend && npm install",
+    "install:front": "cd front && npm install",
+    "install:back": "cd back && npm install",
     "install": "npm run install:back && npm run install:front",
-    "build:front": "cd frontend && npm run build",
-    "build:back": "cd backend && npm run build",
+    "build:front": "cd front && npm run build",
+    "build:back": "cd back && npm run build",
     "build": "npm run build:back && npm run build:front",
-    "start:front": "cd frontend && npm run start",
-    "start:back": "cd backend && npm run start",
+    "start:front": "cd front && npm run start",
+    "start:back": "cd back && npm run start",
     "start": "npm run start:back & npm run start:front",
-    "dev:front": "cd frontend && npm run dev",
-    "dev:back": "cd backend && npm run dev",
+    "dev:front": "cd front && npm run dev",
+    "dev:back": "cd back && npm run dev",
     "dev": "npm run dev:back & npm run dev:front",
-    "lint:front": "cd frontend && npm run lint",
-    "lint:back": "cd backend && npm run lint",
+    "lint:front": "cd front && npm run lint",
+    "lint:back": "cd back && npm run lint",
     "lint": "npm run lint:back && npm run lint:front"
   },
   "private": true
