--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build": "npm run build:back && npm run build:front",
     "start:front": "cd front && npm run start",
     "start:back": "cd back && npm run start:prod",
-    "start": "npm run start:back && npm run start:front",
+    "start": "npm run start:back & npm run start:front",
     "dev:front": "cd front && npm run dev",
     "dev:back": "cd back && npm run dev",
     "dev": "npm run dev:back && npm run dev:front",
