--- a/front/package.json
+++ b/front/package.json
@@ -21,6 +21,7 @@
     "antd": "^5.11.1",
     "axios": "^1.4.0",
     "bootstrap": "^5.3.1",
+    "date-fns": "^3.6.0",
     "dayjs": "^1.11.10",
     "dayjs-plugin-utc": "^0.1.2",
     "draft-js": "^0.11.7",
