--- a/front/.eslintrc.json
+++ b/front/.eslintrc.json
@@ -6,12 +6,15 @@
   },
   "env": {
     "browser": true,
+    "jest": true,
     "es2021": true,
+    "cypress/globals": true,
     "node": true
   },
   "extends": [
     "eslint:recommended",
-    "plugin:react/recommended"
+    "plugin:react/recommended",
+    "plugin:cypress/recommended"
   ],
   "parserOptions": {
     "ecmaFeatures": {
@@ -21,7 +24,8 @@
     "sourceType": "module"
   },
   "plugins": [
-    "react"
+    "react",
+    "cypress"
   ],
   "rules": {
     "react/prop-types": "off",
