--- a/front/package.json
+++ b/front/package.json
@@ -60,11 +60,12 @@
     "@testing-library/user-event": "^14.5.2",
     "babel-jest": "^29.7.0",
     "cypress": "^13.8.0",
-    "eslint": "^8.48.0",
+    "eslint": "^8.57.0",
     "eslint-config-next": "^13.4.19",
     "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-cypress": "^3.0.0",
     "eslint-plugin-prettier": "^5.0.0",
-    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react": "^7.34.1",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
